--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "stylus": "^0.54.5",
     "stylus-loader": "^2.1.1",
     "url-loader": "^0.5.7",
+    "vue-i18n": "^6.1.1",
     "vue-loader": "11.1.4",
     "vue-style-loader": "^2.0.0",
     "vue-template-compiler": "^2.2.2",
